# pd-detector

./: .gitignore  Dockerfile  Makefile  README.md  TRAINING_PIPELINE_SUMMARY.md  config.py  dataset.txt  docker-compose.yml  main.py  main_new.py  pyproject.toml  requirements.txt  restart_server.sh  run.py  setup.py  setup.sh
docs/: API.md
src/: __init__.py
src/mobile_panel_detector/: __init__.py  app.py  cli.py
src/mobile_panel_detector/api/: __init__.py  routes.py
src/mobile_panel_detector/detector/: __init__.py  panel_detector.py
src/mobile_panel_detector/utils/: __init__.py  config.py  image_utils.py
tests/: test_api.py  test_detector.py
training/: README.md  TROUBLESHOOTING.md  __init__.py  auto_label.py  auto_train.py  collect_training_data.py  deploy_model.py  download_dataset.py  evaluate_model.py  fast_train.py  prepare_dataset.py  quick_train.py  requirements_training.txt  simple_train.py  train_yolo.py
training/datasets/auto_labeled/: data.yaml
training/datasets/custom_dataset/: README.md  data.yaml
training/datasets/my_data/: README.md  collection_report.json
training/datasets/panel_dataset/: data.yaml  train.cache  val.cache
training/datasets/panel_dataset/train/: good_0008.txt  good_0018.txt  ground_truth_Oil_0003.txt  ground_truth_Oil_0004.txt  ground_truth_Oil_0005.txt  ground_truth_Oil_0007.txt  ground_truth_Oil_0008.txt  ground_truth_Oil_0009.txt  ground_truth_Oil_0014.txt  ground_truth_Oil_0015.txt  ground_truth_Oil_0019.txt  ground_truth_Oil_0022.txt  ground_truth_Oil_0023.txt  ground_truth_Oil_0025.txt  ground_truth_Oil_0026.txt  ground_truth_Oil_0027.txt  ground_truth_Oil_0029.txt  ground_truth_Oil_0030.txt  ground_truth_Oil_0031.txt  ground_truth_Oil_0032.txt  ground_truth_Oil_0033.txt  ground_truth_Oil_0034.txt  ground_truth_Oil_0038.txt  ground_truth_Oil_0039.txt  ground_truth_Oil_0041.txt  ground_truth_Oil_0042.txt  ground_truth_Oil_0043.txt  ground_truth_Oil_0045.txt  ground_truth_Oil_0048.txt  ground_truth_Oil_0049.txt  ground_truth_Oil_0070.txt  ground_truth_Oil_0071.txt  ground_truth_Oil_0074.txt  ground_truth_Oil_0075.txt  ground_truth_Oil_0158.txt  ground_truth_Oil_0159.txt  ground_truth_Oil_0161.txt  ground_truth_Oil_0162.txt  ground_truth_Oil_0166.txt  ground_truth_Oil_0167.txt  (+350 more)
training/datasets/panel_dataset/val/: ground_truth_Oil_0018.txt  ground_truth_Oil_0021.txt  ground_truth_Oil_0040.txt  ground_truth_Oil_0160.txt  ground_truth_Oil_0345.txt  ground_truth_Oil_0348.txt  ground_truth_Oil_0355.txt  ground_truth_Oil_0366.txt  ground_truth_Oil_0367.txt  ground_truth_Oil_0372.txt  ground_truth_Oil_0380.txt  ground_truth_Oil_0386.txt  ground_truth_Oil_0388.txt  ground_truth_Oil_0392.txt  ground_truth_Oil_0397.txt  oil_Oil_0015.txt  oil_Oil_0018.txt  oil_Oil_0037.txt  oil_Oil_0052.txt  oil_Oil_0053.txt  oil_Oil_0055.txt  oil_Oil_0056.txt  oil_Oil_0059.txt  (+74 more)
training/datasets/simple_dataset/: README.md  collection_report.json
(+7 files in other folders)
